# allthevaccines

./: .envrc  .envrc.example  .gitignore  Makefile  README.md  allthevaccines.org.conf  default.nix  deploy.sh  emperor.uwsgi.service  manage.py  pyproject.toml  requirements.txt  uwsgi.ini  vaccine-disease-data.json
allthevaccines/: asgi.py  settings.py  urls.py  wsgi.py
ansible/: allthevaccines.caddy.j2  allthevaccines.service.j2  playbook.yaml
main/: admin.py  models.py  tests.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_disease_slug.py  0003_alter_disease_name_alter_disease_slug.py  0004_alter_disease_vaccines.py  0005_vaccine_other_url_vaccine_wikipedia_url.py  0006_vaccine_slug.py  0007_alter_vaccine_slug_alter_vaccine_trade_name.py  0008_vaccine_vaccine_class.py  0009_rename_other_url_vaccine_info_urls_and_more.py  0010_vaccine_vaccine_type.py  0011_subscription.py  0012_disease_notes.py  0013_delete_subscription.py
main/static/: style.css
main/templates/main/: about.html  disease_detail.html  disease_list.html  index.html  layout.html  vaccine_detail.html
